2002-01-19  Seth Robertson  <seth@yeah.baka.org>

	* src/genrand.c: Random number production program.  Suitable for
	password generation!

	* lib/b_md5.c: MD5 hash algorithm
	* lib/b_rand.c: Random number generation

	* test/testhashspeed.c: Hashing tests
	* test/testrandidea.c: Update with results

2002-01-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_time_iso_{parse,format}, bk_timegm

	* lib/b_time.c: implement iso 8601 date/time format & parse, timegm

	* lib/Makefile (BK_LARGE_LIBSRC): add b_time.c

2002-01-17  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Patch up a memory leak
	caught by insight.

2002-01-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_url_getparam

	* lib/b_url.c (bk_url_getparam): parse semicolon-delimited parameters

2002-01-15  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_exec.c: Routines in support of executing processes.

2002-01-14  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_do_poll): Only set the don't block
	if there's data already sitting in queue.

2002-01-14  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_getpref): Proper argument checking.
	(bk_run_setpref): Proper argument checking.

	* lib/b_ioh.c (ioh_runhandler): Setpre on correct fd.

2002-01-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (bk_iohh_bnbio_tell): use int64_t, not BSD quad_t

	* include/libbk_internal.h (struct bk_polling_io): use int64_t

	* lib/b_bnbio.c (bk_iohh_bnbio_tell): return int64_t

	* include/libbk_include.h (struct ether_addr): defined if none of the
	possible include files are present

	* include/libbk_oscompat.h: use BK_MINGW
	(HAVE_INET6): #ifdef AF_INET6 and HAVE_inet_pton

	* lib/b_getbyfoo.c (bk_gethostbyfoo, copy_hostent): #ifdef HAVE_INET6

	* lib/b_netaddr.c (bk_netaddr_addrdup, update_bna_pretty): HAVE_INET6
	(bk_netaddr_af2nat, bk_netaddr_nat2af): AF_INET6
